hphp/hack/test/typecheck/constraints/contravariance_constraint_bad.php.like_types.exp
File "contravariance_constraint_bad.php", line 24, characters 12-14:
You are trying to access the member foo but this is not an object, it is a dynamic value or an object of type IHasFoo (Typing[4062])
File "contravariance_constraint_bad.php", line 22, characters 31-37:
Definition is here
File "contravariance_constraint_bad.php", line 30, characters 16-27:
Some type constraint(s) here are violated (Typing[4110])
File "contravariance_constraint_bad.php", line 22, characters 26-26:
'T' is a constrained type parameter
File "contravariance_constraint_bad.php", line 22, characters 31-37:
Some type constraint(s) are violated here
File "contravariance_constraint_bad.php", line 22, characters 26-26:
T is a constrained type parameter
File "contravariance_constraint_bad.php", line 22, characters 31-37:
Expected ~IHasFoo
File "contravariance_constraint_bad.php", line 29, characters 60-66:
But got IHasBar
